Update, build for Qt5

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "lxqt-runner-0.7.0.tar.xz": ca25fad34be481e47b1e9fc116ba75b9c0d5e4f4
+  lxqt-runner-20140803.tar.xz: 5fdfc83c7388095036b06de528fcb421cdd3d34f
