--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  lxqt-runner-20140803.tar.xz: 5fdfc83c7388095036b06de528fcb421cdd3d34f
+  lxqt-runner-0.8.0.tar.xz: 572cabfe9602af16b2e5a1e5e6f350ae7aa645fa
