--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  lxqt-runner-0.9.0.tar.xz: dc33c03ffe9ea6bd8ae6f1daca20b3738cc732d3
+  0.10.0.tar.gz: a7b5364c64710e6fa06e2b45de5c0408a0dc00f7
