--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  0.10.0.tar.gz: a7b5364c64710e6fa06e2b45de5c0408a0dc00f7
+  lxqt-runner-0.10.0.tar.xz: be7ecfa9dede0b970fa88cff5310cd094fda690d
